Actions
Bug #9853
closedloader.efi: pointer targets in passing argument 2 of 'efi_print_global' differ in signedness
Start date:
2018-09-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Build errors when warnings are enabled:
../env.c: In function 'efi_print_var': ../env.c:690:38: error: pointer targets in passing argument 2 of 'efi_print_global' differ in signedness [-Werror=pointer-sign] rv = efi_print_global(varnamearg, data, datasz); ^~~~ ../env.c:480:1: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *' efi_print_global(const CHAR16 *varnamearg, uint8_t *data, UINTN datasz) ^~~~~~~~~~~~~~~~ ../env.c:692:39: error: pointer targets in passing argument 2 of 'efi_print_illumos' differ in signedness [-Werror=pointer-sign] rv = efi_print_illumos(varnamearg, data, datasz); ^~~~ ../env.c:455:1: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *' efi_print_illumos(const CHAR16 *varnamearg, uint8_t *data, UINTN datasz) ^~~~~~~~~~~~~~~~~ ../env.c:695:40: error: pointer targets in passing argument 2 of 'efi_print_mem_type' differ in signedness [-Werror=pointer-sign] rv = efi_print_mem_type(varnamearg, data, datasz); ^~~~ ../env.c:430:1: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *' efi_print_mem_type(const CHAR16 *varnamearg, uint8_t *data, UINTN datasz) ^~~~~~~~~~~~~~~~~~ ../env.c:698:41: error: pointer targets in passing argument 2 of 'efi_print_shell_str' differ in signedness [-Werror=pointer-sign] rv = efi_print_shell_str(varnamearg, data, datasz); ^~~~ ../env.c:377:1: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *' efi_print_shell_str(const CHAR16 *varnamearg, uint8_t *data, UINTN datasz) ^~~~~~~~~~~~~~~~~~~ ../env.c:706:31: error: pointer targets in passing argument 1 of 'efi_print_other_value' differ in signedness [-Werror=pointer-sign] rv = efi_print_other_value(data, datasz); ^~~~ ../env.c:330:1: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *' efi_print_other_value(uint8_t *data, UINTN datasz) ^~~~~~~~~~~~~~~~~~~~~
Updated by Electric Monk almost 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 146341134a2d1d0e3b8b8bab1cf2750d28a3cb14
commit 146341134a2d1d0e3b8b8bab1cf2750d28a3cb14 Author: Toomas Soome <tsoome@me.com> Date: 2018-10-25T00:13:52.000Z 9853 loader.efi: pointer targets in passing argument 2 of 'efi_print_global' differ in signedness Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions