9853 loader.efi: pointer targets in passing argument 2 of 'efi_print_global' differ in signedness Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>